# risksyn

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: .gitignore  README.md
docs/source/: conf.py  generation.md  index.md  risk-modeling.md
docs/source/api/: generator.rst  index.rst  risk.rst
risksyn/: __init__.py  generator.py  processing.py  risk.py
tests/: test_generator.py  test_processing.py  test_risk.py
