[project]
name = "risksyn"
version = "0.1.0"
description = "Synthetic data with interpretable privacy guarantees"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "dpmm>=0.1.9",
    "riskcal>=1.3.0",
]
authors = [
    {name = "Bogdan Kulynych", email = "bogdan@kulyny.ch"},
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["privacy", "differential privacy", "synthetic data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 (AGPL)"
]
dependencies = [
    "dp-accounting==0.4.4",
    "scipy>=1.11.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
addopts = ["-v", "--codeblocks"]
testpaths = ["tests", "README.md"]

[tool.uv]
default-groups = []
