
[project]
name = "risksyn"
version = "0.1.0"
description = "Synthetic data with interpretable privacy guarantees"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "dpmm>=0.1.9",
    "riskcal==1.4.0",
]
authors = [
    {name = "Bogdan Kulynych", email = "bogdan@kulyny.ch"},
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["privacy", "differential privacy", "synthetic data"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser[linkify]>=3.0",
    "nbsphinx>=0.9",
    "sphinx-copybutton>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-codeblocks>=0.17",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
addopts = ["-v", "--codeblocks"]
testpaths = ["tests", "README.md", "docs/source/risk-modeling.md"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = []

[tool.uv.build-backend]
module-root = ""
